--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1133,22 +1133,6 @@
   publisher	= {PMLR}
 }
 
-@InProceedings{	  KehBarThoQua20,
-  author	= {Kehrenberg, Thomas and Bartlett, Myles Scott and Thomas,
-		  Oliver and Quadrianto, Novi},
-  title		= {Null-sampling for Interpretable and Fair Representations},
-  year		= {2020},
-  isbn		= {9783030586041},
-  publisher	= {Springer International Publishing},
-  url		= {https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123710562.pdf},
-  doi		= {10.1007/978-3-030-58604-1},
-  booktitle	= {Computer Vision – ECCV 2020},
-  numpages	= {779},
-  location	= {Glasgow, UK},
-  sortname      = {Kehrenberg},
-  sorttitle	= {b}
-}
-
 @Article{	  kehrenberg2018tuning,
   title		= {Tuning Fairness by Marginalizing Latent Target Labels},
   author	= {Kehrenberg, Thomas and Chen, Zexun and Quadrianto, Novi},
@@ -1156,18 +1140,26 @@
   year		= {2018}
 }
 
+@InProceedings{ kehrenberg2018interpretable,
+  title = {Interpretable Fairness via Target Labels in Gaussian Process Models},
+  author	= {Kehrenberg, Thomas and Chen, Zexun and Quadrianto, Novi},
+  booktitle = {Workshop on Ethical, Social and Governance Issues in AI at NeurIPS},
+  year = {2018},
+  location        = {Montreal, Canada}
+}
+
 @InProceedings{	  kehrenberg2020nullsampling,
   author	= {Kehrenberg, Thomas and Bartlett, Myles and Thomas, Oliver
 		  and Quadrianto, Novi},
   title		= {Null-sampling for Interpretable and Fair Representations},
   year		= {2020},
-  isbn		= {9783030586041},
   publisher	= {Springer International Publishing},
-  url		= {https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123710562.pdf},
   doi		= {10.1007/978-3-030-58604-1},
   booktitle	= {Computer Vision – ECCV 2020},
   numpages	= {779},
-  location	= {Glasgow, UK}
+  location	= {Glasgow, UK},
+  sortname      = {Kehrenberg},
+  sorttitle	= {b}
 }
 
 @Article{	  kehrenberg2020tuning,
@@ -1177,17 +1169,18 @@
   volume	= {3},
   pages		= {33},
   year		= {2020},
+  doi     = {10.3389/frai.2020.00033},
   sortname      = {Kehrenberg},
   sorttitle	= {a}
 }
 
-@Article{	  kehrenberg2020zeroshot,
+@InProceedings{	  kehrenberg2020zeroshot,
   author	= {Kehrenberg, Thomas and Sharmanska, Viktoriia and Bartlett,
 		  Myles and Quad\-ri\-an\-to, Novi},
   title		= {Learning with Perfect Bags: Addressing Hidden Stratification with Zero Labeled Data},
-  booktitle	= {Submitted to International Conference on Machine Learning},
+  booktitle	= {Submitted to ICML},
   year		= {2021},
-  note		= {under review}
+  note		= {Under review}
 }
 
 @InProceedings{	  KerNeeRotWu18,
