--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -100,9 +100,10 @@
   \pdfbookmark[1]{Nomenclature}{nomenclature}
   \markboth{\spacedlowsmallcaps{Nomenclature}}{\spacedlowsmallcaps{Nomenclature}}
   \begin{nomenclature}
+    \entry{$P$}{Probability}
+    \entry{$s$}{Sensitive attribute}
     \entry{$\vx$}{Input features (without sensitive attributes)}
     % \entry{$\hat{\vx}$}{Reconstructed input}
-    \entry{$s$}{Sensitive attribute}
     \entry{$y$}{Class label (ground truth)}
     \entry{$\hat{y}$}{Predicted label}
     \entry{$\bar{y}$}{Fair target label}
