Finally add the third paper

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -77,19 +77,23 @@
   \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
   \chapter*{Acronyms}
   \begin{acronym}[UMLX]
-    \acro{NN}{(artificial) neural network}
+    \acro{AE}{autoencoder}
     \acro{AR}{acceptance rate}
     \acro{CNN}{Convolutional Neural Network}
+    \acro{DL}{Deep Learning}
     \acro{DP}{demographic parity}
     \acro{EOdds}{equalised odds}
     \acro{EOpp}{equality of opportunity}
+    \acro{GP}{Gaussian process}
     \acro{INN}{Invertible Neural Network}
     \acro{LR}{Logistic Regression}
     \acro{ML}{machine learning}
     \acro{MMD}{Maximum Mean Discrepancy}
+    \acro{NN}{(artificial) neural network}
     \acro{SVM}{Support Vector Machine}
     \acro{TNR}{true negative rate}
     \acro{TPR}{true positive rate}
+    \acro{VAE}{variational autoencoder}
   \end{acronym}
 
   \vspace{8ex}
@@ -118,9 +122,9 @@
   \pdfbookmark[1]{Glossary}{nomenclature}
   \markboth{\spacedlowsmallcaps{Glossary}}{\spacedlowsmallcaps{Glossary}}
   \begin{glossaryenv}
-    \entry{sensitive attribute}{Input features (without sensitive attributes)}
+    \entry{sensitive attribute}{An attribute that, usually for legal or ethical reasons, should not be the basis for classification}
     \entry{demographic group}{Set induced by the sensitive attribute}
-    \entry{fairness definition}{An aspirational specification of a fair classifier}
+    \entry{fairness definition}{An aspirational (often legally inspired) specification of a fair classifier}
     \entry{fairness metric}{A metric which quantifies how well a fairness definition is satisfied}
     \entry{MNIST}{dataset of handwritten digits}
   \end{glossaryenv}
