--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2214,3 +2214,12 @@
   pages		= {2223--2232},
   year		= {2017}
 }
+
+@Misc{hleg2019ethics,
+title = {Ethics Guide\-lines for Trustworthy AI},
+author = {{High-Level Expert Group on Artificial Intelligence}},
+shortauthor= {{HLEG AI}},
+month = {4},
+year = {2019},
+ url		= "https://ec.europa.eu/digital-single-market/en/news/ethics-guidelines-trustworthy-ai"
+}
